# panoBot

./: .autotools  .cproject  .project  CMakeLists.txt  README.md  test.c
cmake/: AVR-UART.cmake.in  GetAVR-UART.cmake  GetNanoPB.cmake  NanoPB.cmake.in  avr-arduino-toolchain.cmake
docs/: CMakeLists.txt  Doxyfile.in
hardware/: .gitignore  .main_smd.sch.lck  eagle.epf  main.brd  main.sch  main_smd.brd  main_smd.brd.back  main_smd.csv  main_smd.dpv  main_smd.drh  main_smd.dxf  main_smd.html  main_smd.sch  main_smd.sch.back  main_smd_BOM.html  main_smd_back.dxf  main_smd_first_draft.brd  main_smd_first_draft.sch  main_smd_smaller_draft.brd  main_smd_smaller_draft.sch  main_smd_values.csv  main_smd_values.html  main_smd_values.ods  template_4_layer.cam
hardware/gerber_files/: main_smd.cmp  main_smd.crc  main_smd.crs  main_smd.drd  main_smd.drh  main_smd.gpi  main_smd.l15  main_smd.ly2  main_smd.plc  main_smd.pls  main_smd.sol  main_smd.stc  main_smd.sts
hardware/gerber_files/main_smd_2018-06-13/: gerber_job.gbrjob  main_smd.cmp  main_smd.crc  main_smd.crs  main_smd.l15  main_smd.ly2  main_smd.plc  main_smd.pls  main_smd.sol  main_smd.stc  main_smd.sts
hardware/gerber_files/outputs/: gerber_job.gbrjob
po/: CMakeLists.txt  POTFILES.in  de.po  en_US.po  untitled.pot
src/: CMakeLists.txt
src/Firmware/: ButtonTest.c  Buttons.h  CMakeLists.txt  panoBot.cpp
src/Firmware-Old/: panoBot.cpp
src/Firmware-Old/Buttons/: ButtonTest.c  Buttons.h
src/Firmware-Old/Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp
src/Firmware-Old/Connection/: Interrupts.cpp  Interrupts.hpp
src/Firmware-Old/Display/: Coordinate.hpp  Display.cpp  Display.hpp
src/Firmware-Old/Display/examples/: screendatasheet_example.cpp
src/Firmware-Old/Servo/: CMakeLists.txt  PIDObj.cpp  Servo.cpp  Servo.hpp
src/Firmware-Old/Setup/: CMakeLists.txt  Setup.cpp  Setup.hpp
src/Firmware-Old/Util/: CMakeLists.txt  Pair.hpp  RingBuffer.cpp  RingBuffer.hpp  delay.cpp  delay.hpp  delete.cpp  delete.hpp  new.cpp  new.hpp
src/Firmware/Arduino-Core/: CMakeLists.txt  main.cpp  pins_arduino.h
src/Firmware/Buttons/: ButtonTest.c
src/Firmware/Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp
src/Firmware/Connection/: CMakeLists.txt  Interrupts.cpp  Interrupts.hpp
src/Firmware/Display/: CMakeLists.txt  Coordinate.hpp  Display.cpp  Display.hpp
src/Firmware/Servo/: CMakeLists.txt  PIDObj.cpp  PIDObj.hpp  Servo.cpp  Servo.hpp  oldservo.cpp  servotest.cpp
src/Firmware/ServoControl/: PIDObj.cpp  PIDObj.hpp  Servo.c
src/Firmware/Setup/: CMakeLists.txt  Setup.cpp  Setup.hpp  SetupPins.cpp  SetupPins.hpp  SetupSerial.cpp  SetupSerial.hpp
src/Firmware/Util/: CMakeLists.txt  Pair.hpp  RingBuffer.cpp  RingBuffer.hpp  delay.cpp  delay.hpp  delete.cpp  delete.hpp  new.cpp  new.hpp
src/Firmware/screen/: screen.hpp  screenmain.cpp
src/Firmware/screen/examples/: ._screendatasheet_example.cpp
src/GUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.hpp  Makefile  main.cpp
src/Protocol/: CameraInfoResponse.proto  Command.proto  SensorType.proto
